# CMakePorts

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  bootstrap  configure.cmake.in
cmake/: AddRepositories.cmake  CMakeLists.txt  FindA52Dec.cmake  FindCFITSIO.cmake  FindCppUnit.cmake  FindDuchamp.cmake  FindFFTW3.cmake  FindGFortran.cmake  FindGMP.cmake  FindGSL.cmake  FindGhostscript.cmake  FindHDF5.cmake  FindIconv.cmake  FindLLVM.cmake  FindLibiconv.cmake  FindLog4cplus.cmake  FindMPC.cmake  FindMatroska.cmake  FindPELICAN.cmake  FindPIL.cmake  FindPOPT.cmake  FindPthread.cmake  FindReadline.cmake  InstallPorts.cmake  MacPorts.cmake  TestThrustVersion.cc  template-CMakeLists.txt  template_FindXX.cmake
cmake/Modules/: FindAPR.cmake  FindAutoconf.cmake  FindBlitz.cmake  FindBoost.cmake  FindCppUnit.cmake  FindExiv2.cmake  FindFFTW3.cmake  FindFv.cmake  FindGMP.cmake  FindGit.cmake  FindHDF5.cmake  FindICU4C.cmake  FindLocalRepositories.cmake  FindMPC.cmake  FindMPFR.cmake  FindNeon.cmake  FindOpenMPI.cmake  FindPOPT.cmake  FindPPL.cmake  FindPth.cmake  FindSILO.cmake  FindSLang.cmake  FindSQLite.cmake  FindSystemHeaders.cmake  FindTeem.cmake  FindTermcap.cmake  FindThrust.cmake  FindTreecc.cmake  template_FindXX.cmake
ports/: CMakeLists.txt  InstallMacPorts.cmake  README  template-CMakeLists.txt
ports/archivers/: CMakeLists.txt
ports/archivers/szip/: CMakeLists.txt
ports/archivers/xz/: CMakeLists.txt
ports/archivers/zlib/: CMakeLists.txt
ports/database/: CMakeLists.txt
ports/database/mysql/: CMakeLists.txt
ports/database/sqlite/: CMakeLists.txt
ports/database/tellico/: CMakeLists.txt
ports/devel/: CMakeLists.txt
ports/devel/apr/: CMakeLists.txt
ports/devel/apr-util/: CMakeLists.txt
ports/devel/autoconf/: CMakeLists.txt
ports/devel/autogen/: CMakeLists.txt
ports/devel/automake/: CMakeLists.txt
ports/devel/bison/: CMakeLists.txt
ports/devel/boost/: CMakeLists.txt
ports/devel/cloog-ppl/: CMakeLists.txt
ports/devel/cmake/: CMakeLists.txt
ports/devel/cppunit/: CMakeLists.txt
ports/devel/doxygen/: CMakeLists.txt
ports/devel/gettext/: CMakeLists.txt
ports/devel/git/: CMakeLists.txt  runConfigure.in
ports/devel/gmp/: CMakeLists.txt
ports/devel/libmpc/: CMakeLists.txt
ports/devel/libtool/: CMakeLists.txt
ports/devel/log4cplus/: CMakeLists.txt
ports/devel/mpfr/: CMakeLists.txt
ports/devel/ncurses/: CMakeLists.txt
ports/devel/openssl/: CMakeLists.txt
ports/devel/polylib/: CMakeLists.txt
ports/devel/popt/: CMakeLists.txt
ports/devel/ppl/: CMakeLists.txt
ports/devel/pth/: CMakeLists.txt
ports/devel/qt/: CMakeLists.txt
ports/devel/readline/: CMakeLists.txt
ports/devel/subversion/: CMakeLists.txt
ports/devel/treecc/: CMakeLists.txt
ports/devel/valgrind/: CMakeLists.txt
ports/editors/: CMakeLists.txt
ports/editors/nano/: CMakeLists.txt
ports/editors/nedit/: CMakeLists.txt  Makefile.linux.in  Makefile.macosx.in
ports/editors/vim/: CMakeLists.txt
ports/graphics/: CMakeLists.txt
ports/graphics/darktable/: CMakeLists.txt
ports/graphics/exiv2/: CMakeLists.txt
ports/graphics/freetype/: CMakeLists.txt
ports/graphics/geeqie/: CMakeLists.txt
ports/graphics/glut/: CMakeLists.txt
ports/graphics/gnuplot/: CMakeLists.txt
ports/graphics/itk/: CMakeLists.txt
ports/graphics/paraview/: CMakeLists.txt
ports/graphics/visit/: CMakeLists.txt
ports/lang/: CMakeLists.txt
ports/lang/guile/: CMakeLists.txt
ports/lang/llvm/: CMakeLists.txt
ports/lang/perl/: CMakeLists.txt
ports/lang/python/: CMakeLists.txt
ports/lang/rice/: CMakeLists.txt
ports/lang/slang/: CMakeLists.txt
ports/lang/yasm/: CMakeLists.txt
ports/math/: CMakeLists.txt
ports/math/blas/: CMakeLists.txt
ports/math/blitz/: CMakeLists.txt
ports/math/fftw3/: CMakeLists.txt
ports/math/gsl/: CMakeLists.txt
ports/math/lapack/: CMakeLists.txt
ports/multimedia/: CMakeLists.txt
ports/multimedia/a52dec/: CMakeLists.txt
ports/multimedia/libdvb/: CMakeLists.txt
ports/multimedia/libdvbpsi/: CMakeLists.txt
ports/multimedia/libdvdcss/: CMakeLists.txt
ports/multimedia/libflac/: CMakeLists.txt
ports/multimedia/libmatroska/: CMakeLists.txt  libmatroska.cmake
ports/multimedia/libogg/: CMakeLists.txt
ports/multimedia/libvorbis/: CMakeLists.txt
ports/multimedia/libvpx/: CMakeLists.txt
ports/multimedia/mplayer/: CMakeLists.txt
ports/multimedia/webm/: CMakeLists.txt
ports/multimedia/yamka/: CMakeLists.txt
ports/net/: CMakeLists.txt
ports/net/curl/: CMakeLists.txt
ports/net/wget/: CMakeLists.txt
ports/office/: CMakeLists.txt
ports/office/task/: CMakeLists.txt
ports/parallel/: CMakeLists.txt
ports/parallel/glew/: CMakeLists.txt
ports/parallel/openmpi/: CMakeLists.txt
ports/print/: CMakeLists.txt
ports/print/ghostscript/: CMakeLists.txt
ports/print/gutenprint/: CMakeLists.txt
ports/science/: CMakeLists.txt
ports/science/aoflagger/: CMakeLists.txt
ports/science/casacore/: CMakeLists.txt  casacore.cmake.in  casacore.patch
ports/science/casacore_measures/: CMakeLists.txt  casacore_measures.cmake
ports/science/cfitsio/: CMakeLists.txt
ports/science/cgal/: CMakeLists.txt
ports/science/cloudy/: CMakeLists.txt  Makefile  cloudy.cmake
ports/science/dal/: CMakeLists.txt
ports/science/duchamp/: CMakeLists.txt
ports/science/enzo/: CMakeLists.txt
ports/science/hdf5/: CMakeLists.txt  hdf5.cmake
ports/science/netcdf/: CMakeLists.txt
ports/science/pelican/: CMakeLists.txt
ports/science/pil/: CMakeLists.txt
ports/science/plplot/: CMakeLists.txt  plplot.cmake.in
ports/science/root/: CMakeLists.txt
ports/science/silo/: CMakeLists.txt
ports/science/tmf/: CMakeLists.txt
ports/science/wcslib/: CMakeLists.txt  wcslib.cmake
ports/sysutils/: CMakeLists.txt
ports/sysutils/hwloc/: CMakeLists.txt
ports/sysutils/tree/: CMakeLists.txt  tree.cmake
ports/tex/: CMakeLists.txt
ports/tex/texlive/: CMakeLists.txt
ports/textproc/: CMakeLists.txt
ports/textproc/expat/: CMakeLists.txt
ports/www/: CMakeLists.txt
ports/x11/: CMakeLists.txt
repositories/: CMakeLists.txt
(+13 files in other folders)
